fix: vote start text and proposal title alignment

--- a/assets/stylesheets/karma-score.scss
+++ b/assets/stylesheets/karma-score.scss
@@ -192,7 +192,7 @@
 .k-btn {
   transition: 200ms ease-in-out;
   box-shadow: $box-shadow-1;
-  padding: 0.5em 1.5em;
+  padding: 0.5em 1.3em;
   border: none;
   border-radius: 8px;
   color: white;
